--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,53 @@
         android:id="@+id/img_card1"
         android:layout_width="100dp"
         android:layout_height="0dp"
-        android:src="@drawable/c_2_of_clubs"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/img_card2"
+        android:layout_width="100dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/img_card3"
+        android:layout_width="100dp"
+        android:layout_height="0dp"
+        android:src="@drawable/c_2_of_clubs"
+        app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/img_card4"
+        android:layout_width="100dp"
+        android:layout_height="0dp"
+        android:src="@drawable/c_2_of_clubs"
+        app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/img_card5"
+        android:layout_width="100dp"
+        android:layout_height="0dp"
+        android:src="@drawable/c_2_of_clubs"
+        app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/btn_shuffle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:text="Good Luck"
+        app:layout_constraintTop_toBottomOf="@id/img_card1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
